--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -9,6 +9,7 @@ service_link: https://wifi.service.gov.uk
 # Links to show on right-hand-side of header
 header_links:
   Documentation: /
+  Support: https://admin.wifi.service.gov.uk/help
   Admin: https://admin.wifi.service.gov.uk/users/sign_in
 
 # Enables search functionality. This indexes pages only and is not recommended for single-page sites.
