--- a/ci/pipelines/deploy.yml
+++ b/ci/pipelines/deploy.yml
@@ -1,4 +1,17 @@
+groups:
+- name: deployer
+  jobs:
+  - deploy
+- name: self-update
+  jobs:
+  - self-update
+
 resources:
+  - name: tech-ops
+    type: git
+    source:
+      uri: https://github.com/alphagov/tech-ops.git
+
   - name: govwifi-tech-docs
     type: git
     source:
@@ -14,6 +27,23 @@ resources:
       tag: concourse-runner-latest
 
 jobs:
+  - name: self-update
+    serial: true
+    plan:
+    - get: tech-ops
+      params:
+        submodules: none
+    - get: govwifi-tech-docs
+      trigger: true
+    - task: set-pipelines
+      file: tech-ops/ci/tasks/self-updating-pipeline.yaml
+      input_mapping: {repository: govwifi-tech-docs}
+      params:
+        CONCOURSE_TEAM: govwifi
+        CONCOURSE_PASSWORD: ((readonly_local_user_password))
+        PIPELINE_PATH: ci/pipelines/deploy.yml
+        PIPELINE_NAME: tech-docs-deploy
+
   - name: deploy
     plan:
       - get: src
