--- a/ci/pipelines/pr.yml
+++ b/ci/pipelines/pr.yml
@@ -1,5 +1,13 @@
 # just a high level test to make sure everything builds properly. No actual tests.
 
+groups:
+- name: builder
+  jobs:
+  - build
+- name: self-update
+  jobs:
+  - self-updater
+
 resource_types:
 - name: pull-request
   type: registry-image
@@ -7,6 +15,16 @@ resource_types:
     repository: teliaoss/github-pr-resource
 
 resources:
+  - name: tech-ops
+    type: git
+    source:
+      uri: https://github.com/alphagov/tech-ops.git
+
+  - name: govwifi-tech-docs
+    type: git
+    source:
+      uri: https://github.com/alphagov/govwifi-tech-docs.git
+
   - name: pull-request
     type: pull-request
     check_every: 1m
@@ -15,6 +33,23 @@ resources:
       access_token: ((github-access-token))
 
 jobs:
+  - name: self-update
+    serial: true
+    plan:
+    - get: tech-ops
+      params:
+        submodules: none
+    - get: govwifi-tech-docs
+      trigger: true
+    - task: set-pipelines
+      file: tech-ops/ci/tasks/self-updating-pipeline.yaml
+      input_mapping: {repository: govwifi-tech-docs}
+      params:
+        CONCOURSE_TEAM: govwifi
+        CONCOURSE_PASSWORD: ((readonly_local_user_password))
+        PIPELINE_PATH: ci/pipelines/pr.yml
+        PIPELINE_NAME: tech-docs-pr
+
   - name: build
     interruptible: true
     disable_manual_trigger: true
