--- a/ci/pipelines/deploy.yml
+++ b/ci/pipelines/deploy.yml
@@ -18,14 +18,6 @@ resources:
       uri: "https://github.com/alphagov/govwifi-tech-docs.git"
       branch: master
 
-  - name: runner
-    # See https://github.com/alphagov/govwifi-concourse-runner for a reference dockerfile
-    # readonly_private_ecr_repo_url is provided by the hosted Concourse
-    type: docker-image
-    source:
-      repository: "((readonly_private_ecr_repo_url))"
-      tag: concourse-runner-latest
-
 jobs:
   - name: self-update
     serial: true
@@ -50,12 +42,37 @@ jobs:
         resource: govwifi-tech-docs
         trigger: true
 
-      - get: runner
-
       - task: deploy
-        privileged: true
-        image: runner
-        file: src/ci/tasks/deploy.yml
         params:
+          CF_API: https://api.cloud.service.gov.uk
           CF_USER: ((govpaas-username))
           CF_PASS: ((govpaas-password))
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source:
+              repository: governmentpaas/cf-cli
+              tag: 50f6eb732334e0af7192bb884e558e3dc7e9fa33
+          inputs:
+            - name: src
+          run:
+            path: sh
+            args:
+              - -e
+              - -c
+              - |
+                cd src/
+
+                echo "Installing dependencies..."
+                apk --update add g++ musl-dev make git nodejs
+                bundle install
+
+                echo "Running the build..."
+                bundle exec middleman build
+
+                echo "Logging into CF..."
+                cf login -u "${CF_USER}" -p "${CF_PASS}" -a "${CF_API}" -s production
+
+                echo "Pushing the app..."
+                cf push govwifi-tech-docs
