--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -11,7 +11,7 @@ phase: "Beta"
 header_links:
   Connect to GovWifi: https://www.wifi.service.gov.uk/about-govwifi/connect-to-govwifi
   Offer GovWifi: https://docs.wifi.service.gov.uk/
-  Support: https://www.wifi.service.gov.uk/support
+  Technical: https://docs.wifi.service.gov.uk/manage/#manage-govwifi
   Admin: https://admin.wifi.service.gov.uk/users/sign_in
 
 footer_links:
