Enable ZDD to PaaS
Because downtime is bad!

--- a/ci/pipelines/build-and-deploy.yml
+++ b/ci/pipelines/build-and-deploy.yml
@@ -139,6 +139,7 @@ jobs:
               cp manifest.yml ../build
       - put: deploy-to-paas
         params:
+          current_app_name: govwifi-tech-docs
           manifest: build/manifest.yml
           show_app_log: true
           path: build
