Add live service routes
When the deploy happens, it uses the zero downtime plugin, which needs all routes to be in the manifest, because it creates a new app.

--- a/manifest.yml
+++ b/manifest.yml
@@ -4,3 +4,6 @@ applications:
     memory: 64M
     path: ./build
     buildpack: staticfile_buildpack
+    routes:
+      - route: govwifi-tech-docs.cloudapps.digital
+      - route: docs.wifi.service.gov.uk
