--- a/ci/pipelines/build-and-deploy.yml
+++ b/ci/pipelines/build-and-deploy.yml
@@ -109,6 +109,7 @@ jobs:
     serial: true
     plan:
       - get: govwifi-tech-docs
+        passed: [self-update]      
         trigger: true
       - task: bundle-govwifi-tech-docs
         timeout: 15m
