--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -10,7 +10,7 @@ phase: "Beta"
 # Links to show on right-hand-side of header
 header_links:
   Connect to GovWifi: https://www.wifi.service.gov.uk/about-govwifi/connect-to-govwifi
-  Offer GovWifi: https://docs.wifi.service.gov.uk/
+  Offer GovWifi: /
   Support: https://www.wifi.service.gov.uk/support
   Admin: https://admin.wifi.service.gov.uk/users/sign_in
 
