--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -9,9 +9,8 @@ phase: "Beta"
 
 # Links to show on right-hand-side of header
 header_links:
-  Connect to GovWifi: https://www.wifi.service.gov.uk/about-govwifi/connect-to-govwifi
+  Connect to GovWifi: https://www.wifi.service.gov.uk/connect-to-govwifi
   Offer GovWifi: /
-  Support: https://www.wifi.service.gov.uk/support
   Admin: https://admin.wifi.service.gov.uk/users/sign_in
 
 footer_links:
