Adds Footer with links to Github repo
This feature was added to help Users report issues they find and also how they can contribute.

--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -35,3 +35,6 @@ max_toc_heading_level: 3
 
 # Prevent robots from indexing (e.g. whilst in development)
 prevent_indexing: false
+
+show_contribution_banner: true
+github_repo: alphagov/govwifi-tech-docs/
