Migrate to github pages

--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -3,8 +3,8 @@ host: docs.wifi.service.gov.uk
 
 # Header-related options
 show_govuk_logo: true
-service_name: GovWifi
-service_link: https://wifi.service.gov.uk
+service_name: GovWifi Tech Docs (under test)
+service_link: https://docs.wifi.service.gov.uk
 
 # Links to show on right-hand-side of header
 header_links:
